--- a/ui/pages/create-account/connect-hardware/index.scss
+++ b/ui/pages/create-account/connect-hardware/index.scss
@@ -1,5 +1,5 @@
 .hw-tutorial {
-  width: 375px;
+  width: 525px;
   overflow: visible;
   display: block;
   padding: 15px 30px;
@@ -28,6 +28,7 @@
   &__btn-wrapper {
     flex: 1;
     flex-direction: row;
+    overflow: auto;
     display: flex;
   }
 
@@ -52,6 +53,7 @@
     justify-content: center;
     border-radius: 5px;
     padding: 0;
+    margin-right: 15px;
 
     &__img {
       width: 95px;
@@ -64,7 +66,6 @@
   }
 
   &__btn:first-child {
-    margin-right: 15px;
     margin-left: 20px;
   }
 
